<resources>
    <string name="app_name">Learn Android </string>

    <string name="rafaqat">Rafaqat Mehmood</string>
    <string name="start">Start</string>
    <string name="your_health_journey_starts_here">Your Health Journey Starts Here</string>
    <string name="what_is_your_height">What is Your Height ?</string>
    <string name="select_your_height">Select Your Gender</string>
    <string name="height_helps_personalize_workouts_and_trackfitness_progress_accurately">Height helps personalize workouts and \ntrackfitness progress accurately</string>
    <string name="next">Next</string>
    <string name="what_is_your_weight">What is Your Weight ?</string>
    <string name="what_is_your_age">What is Your Age ?</string>
    <string name="knowing_your_weight_helps_us_tailor_n_workouts_track_progress_better"><![CDATA[Knowing your weight helps us tailor\n workouts & track progress better]]></string>
    <string name="knowing_your_age_helps_us_tailor_n_workouts_track_progress_better"><![CDATA[Knowing your age helps us tailor\n workouts & track progress better]]></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="your_age">Your Age</string>
</resources>